MLP-6/fix: fixing broken word wrap

--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,10 @@
 .mobile__container {
   width: 100%;
   height: 100%;
-  overflow: auto;
 }
 .mobile__display {
   padding: 10vh 5% 0 5%;
+  word-wrap: break-word;
 }
 .mobile__white-container {
   display: flex;
@@ -100,6 +100,5 @@
       calc(var(--frame-height) * 0.01635);
     padding: 1% 0%;
     height: calc(var(--frame-height) * 0.9033);
-    word-wrap: break-word;
   }
 }
